# rusty-rocket

./: .gitignore  Cargo.toml  crt0.s  linker.ld  thumbv4-none-bpmp.json
src/: main.rs
